--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -24,7 +24,7 @@ jobs:
         with:                                 
           python-version: '3.8'                                                   
       - name: 💿 Install scholarly & pyrogram                              
-        run: pip install scholarly pyrogram 
+        run: pip install scholarly pyrogram openai
       - name: 🍳 run bot.py
         run: |
           cd ${GITHUB_WORKSPACE}/
