--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -28,7 +28,7 @@ jobs:
         run: pip install scholarly pyrogram openai
       - name: 🍳 run bot.py
         run: |
-          run: export OPENAI_API_KEY=${{ secrets.OPENAI_TOKEN }}
+          export OPENAI_API_KEY=${{ secrets.OPENAI_TOKEN }}
           cd ${GITHUB_WORKSPACE}/
           python bot.py
       - name: 🚀 Deploy
