--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -25,7 +25,7 @@ jobs:
         with:                                 
           python-version: '3.8'                                                   
       - name: 💿 Install scholarly & pyrogram and set API                            
-        run: pip install scholarly pyrogram openai google-generativeai
+        run: pip install scholarly pyrogram openai google-generativeai==0.3.1
       - name: 🍳 run bot.py
         run: |
           export OPENAI_API_KEY=${{ secrets.OPENAI_TOKEN }}
